--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -1,6 +1,6 @@
 .comment {
   background-color: rgba(0,0,0,.1);
-  padding: 10px 20px;
+  padding: 5px 10px;
   border: 1px dotted #ccc;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
@@ -9,4 +9,21 @@
 
 .comment + .comment {
   margin: 10px 0;
+}
+
+.comment p {
+  font-size: 12px;
+  line-height: 1;
+  word-wrap:break-word;
+  margin-bottom: 0;
+}
+
+.span4 {
+  padding: 5px;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, .25);
+     -moz-box-shadow: 0 2px 10px rgba(0, 0, 0, .25);
+          box-shadow: 0 2px 10px rgba(0, 0, 0, .25);
 }
