--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -27,3 +27,12 @@
      -moz-box-shadow: 0 2px 10px rgba(0, 0, 0, .25);
           box-shadow: 0 2px 10px rgba(0, 0, 0, .25);
 }
+
+p.lead {
+  text-align: left;
+}
+
+.affix { 
+  right: 30px;
+  left: auto;
+}
