--- a/class_06/stylesheets/screen.css
+++ b/class_06/stylesheets/screen.css
@@ -59,7 +59,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 .container {
-  max-width: 1024px;
+  width: 1024px;
   margin: 0 auto;
 }
 
@@ -170,13 +170,58 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   line-height: 60px;
   text-align: center;
   color: white;
-  background-color: #cccccc;
+  background-color: #1b1b1b;
   float: right;
   margin-top: -40px;
 }
 
+.sidebar {
+  width: 320px;
+  height: 400px;
+  margin-top: 20px;
+  margin-left: 20px;
+  background: #aaaaaa;
+  float: left;
+}
+
+.feature {
+  width: 684px;
+  height: 400px;
+  margin-top: 40px;
+  background-color: #1b1b1b;
+  float: left;
+}
+
+.third {
+  width: 320px;
+  height: 300px;
+  margin-top: 60px;
+  background-color: #333333;
+  float: left;
+  margin-left: 31px;
+}
+
+.third:first-child {
+  margin-left: 0;
+}
+
+.cta {
+  height: 275px;
+  width: 874px;
+  margin: 60px auto 0;
+  background-color: #1b1b1b;
+}
+
 .footer {
-  margin-top: 450px;
-  height: 250px;
+  height: 350px;
   background-color: #999999;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
 }
