--- a/class_06/sass/screen.sass
+++ b/class_06/sass/screen.sass
@@ -4,22 +4,12 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
 @import compass/reset
-  
-.container
-  width: 1024px
-  margin: 0 auto
+
+/*  START Header / Footer  */
 
 .header
   background-color: #eee
   padding: 7px 0
-
-.header:after 
-  visibility: hidden
-  display: block
-  font-size: 0
-  content: " "
-  clear: both
-  height: 0
 
 .social-links
   list-style-type: none
@@ -36,15 +26,12 @@
   -webkit-transition: all .4s
   -moz-transition: all .4s
   transition: all .4s
-
-.s-link:first-child
-  margin-right: 7px
-
-.s-link:last-child
-  margin-left: 7px
-
-.s-link:hover
-  background: #333
+  &:first-child
+    margin-right: 7px
+  &:last-child
+    margin-left: 7px
+  &:hover
+    background: #333
 
 .login
   font-size: 14px
@@ -56,9 +43,8 @@
   -webkit-transition: all .4s
   -moz-transition: all .4s
   transition: all .4s
-
-.login:hover
-  color: #d81417
+  &:hover
+    color: #d81417
 
 .search
   width: 200px
@@ -83,15 +69,12 @@
   -webkit-transition: all .4s
   -moz-transition: all .4s
   transition: all .4s
-
-.nav-link:first-child
-  padding-left: 0
-
-.nav-link:last-child
-  border-right: none
-
-.nav-link:hover
-  color: #fdd017
+  &:first-child
+    padding-left: 0
+  &:last-child
+    border-right: none
+  &:hover
+    color: #fdd017
 
 .logo
   width: 320px
@@ -105,6 +88,19 @@
   float: right
   margin-top: -40px
 
+.footer
+  height: 350px
+  background-color: #999
+
+
+/*  END Header / Footer  */
+
+/*  START Home Page  */
+
+.container
+  width: 1024px
+  margin: 0 auto
+
 .sidebar
   width: 320px
   height: 400px
@@ -112,6 +108,8 @@
   margin-left: 20px
   background: #aaa
   float: left
+  &.small
+    height: 100px
 
 .feature
   width: 684px
@@ -119,6 +117,8 @@
   margin-top: 40px
   background-color: #1b1b1b  
   float: left
+  &.small
+    height: 100px
 
 .third
   width: 320px
@@ -127,9 +127,8 @@
   background-color: #333
   float: left
   margin-left: 31px
-
-.third:first-child
-  margin-left: 0
+  &:first-child
+    margin-left: 0
 
 .cta 
   height: 275px
@@ -137,10 +136,30 @@
   margin: 60px auto 0
   background-color: #1b1b1b
 
+/*  END Home Page  */
 
-.footer
-  height: 350px
-  background-color: #999
+/*  START Blog Page  */
+
+.post
+  width: 684px
+  height: 250px
+  margin-top: 40px
+  background-color: #444
+  float: left
+  &.bottom
+    margin-bottom: 40px
+
+.post-img
+  width: 320px
+  height: 250px
+  margin-top: 40px
+  margin-left: 20px
+  background-color: #777
+  float: left
+  &.bottom
+    margin-bottom: 40px
+
+/*  END Blog Page  */
 
 .clearfix:after 
   visibility: hidden
