wheee did some cleaning up, more clean up to come

--- a/class_06/sass/screen.sass
+++ b/class_06/sass/screen.sass
@@ -106,10 +106,14 @@
   height: 400px
   margin-top: 20px
   margin-left: 20px
-  background: #aaa
+  background-color: #aaa
   float: left
   &.small
     height: 100px
+  &.about-us
+    height: 250px
+    background-color: #999
+    margin-left: 0
 
 .feature
   width: 684px
@@ -119,6 +123,11 @@
   float: left
   &.small
     height: 100px
+  &.about-blurb
+    height: 250px
+    background-color: #ccc
+    margin-top: 20px
+    margin-left: 20px
 
 .third
   width: 320px
@@ -129,6 +138,11 @@
   margin-left: 31px
   &:first-child
     margin-left: 0
+  &.services
+    background-color: #777
+    margin-top: 20px
+  &.services.bottom
+    margin-bottom: 40px
 
 .cta 
   height: 275px
