--- a/class_06/sass/screen.sass
+++ b/class_06/sass/screen.sass
@@ -5,10 +5,24 @@
 
 @import compass/reset
 
+$new-red: #ed6456
+$main-width: 684px
+$side-width: 320px
+
+@mixin rounded($radius)
+  border-radius: $radius
+  -moz-border-radius: $radius
+  -webkit-border-radius: $radius
+
+@mixin transition($prop, $delay: 1s, $timing: linear) 
+  transition: $prop, $delay, $timing
+  -moz-transition: $prop, $delay, $timing
+  -webkit-transition: $prop, $delay, $timing
+
 /*  START Header / Footer  */
 
 .header
-  background-color: #eee
+  background-color: $new-red
   padding: 7px 0
 
 .social-links
@@ -19,13 +33,9 @@
   width: 30px
   height: 30px
   background: #fff
-  -webkit-border-radius: 15px
-  -moz-border-radius: 15px
-  border-radius: 15px
+  @include rounded(15px)
   float: left
-  -webkit-transition: all .4s
-  -moz-transition: all .4s
-  transition: all .4s
+  @include transition(all, .4s)
   &:first-child
     margin-right: 7px
   &:last-child
@@ -40,9 +50,7 @@
   padding-top: 10px
   padding-right: 15px
   float: right
-  -webkit-transition: all .4s
-  -moz-transition: all .4s
-  transition: all .4s
+  @include transition(all, .4s)
   &:hover
     color: #d81417
 
@@ -50,9 +58,7 @@
   width: 200px
   height: 30px
   background: #fff
-  -webkit-border-radius: 15px
-  -moz-border-radius: 15px
-  border-radius: 15px
+  @include rounded(15px)
   float: right
 
 .nav
@@ -66,9 +72,7 @@
   padding: 3px 25px
   text-decoration: none
   border-right: 1px solid #eee
-  -webkit-transition: all .4s
-  -moz-transition: all .4s
-  transition: all .4s
+  @include transition(all, .4s)
   &:first-child
     padding-left: 0
   &:last-child
@@ -77,7 +81,7 @@
     color: #fdd017
 
 .logo
-  width: 320px
+  width: $side-width
   height: 60px
   font-size: 36px
   font-weight: 900
@@ -102,7 +106,7 @@
   margin: 0 auto
 
 .sidebar
-  width: 320px
+  width: $side-width
   height: 400px
   margin-top: 20px
   margin-left: 20px
@@ -116,7 +120,7 @@
     margin-left: 0
 
 .feature
-  width: 684px
+  width: $main-width
   height: 400px
   margin-top: 40px
   background-color: #1b1b1b  
@@ -130,7 +134,7 @@
     margin-left: 20px
 
 .third
-  width: 320px
+  width: $side-width
   height: 300px
   margin-top: 60px
   background-color: #333
@@ -148,14 +152,14 @@
   height: 275px
   width: 874px
   margin: 60px auto 0
-  background-color: #1b1b1b
+  background-color: $new-red
 
 /*  END Home Page  */
 
 /*  START Blog Page  */
 
 .post
-  width: 684px
+  width: $main-width
   height: 250px
   margin-top: 40px
   background-color: #444
@@ -164,7 +168,7 @@
     margin-bottom: 40px
 
 .post-img
-  width: 320px
+  width: $side-width
   height: 250px
   margin-top: 40px
   margin-left: 20px
