--- a/class_07/sass/_settings.scss
+++ b/class_07/sass/_settings.scss
@@ -95,7 +95,7 @@
 
 // Top Bar Settings
 
-// $topBarBgColor: #222;
+$topBarBgColor: #ed6456;
 // $topBarHeight: 45px;
 // $topBarHeightMobile: 45px;
 // $topBarBtmMargin: 30px;
@@ -104,7 +104,7 @@
 // $topBarLinkColor: #fff;
 // $topBarLinkWeight: bold;
 // $topBarLinkSize: 13px;
-// $topBarDropBgColor: #222;
+$topBarDropBgColor: #ed6456;
 // $topBarDropLinkColor: #fff;
 // $topBarDropToggleSize: 5px;
 // $topBarDropToggleColor: #fff;
